--- a/DazStudioPlugin/CMakeLists.txt
+++ b/DazStudioPlugin/CMakeLists.txt
@@ -68,8 +68,15 @@ set_target_properties (${DZ_PLUGIN_TGT_NAME}
 	PROJECT_LABEL ${DZ_PLUGIN_PROJECT_NAME}
 )
 
-target_compile_definitions(${DZ_PLUGIN_TGT_NAME}
-	PUBLIC
-	$<$<CONFIG:DEBUG>:UNITTEST_DZBRIDGE>
-	${DZBRIDGE_LIB_FLAGS}
-)
+if (WIN32)
+	target_compile_definitions(${DZ_PLUGIN_TGT_NAME}
+		PUBLIC
+		$<$<CONFIG:DEBUG>:UNITTEST_DZBRIDGE>
+		${DZBRIDGE_LIB_FLAGS}
+	)
+elseif (APPLE)
+	target_compile_definitions(${DZ_PLUGIN_TGT_NAME}
+		PUBLIC
+		${DZBRIDGE_LIB_FLAGS}
+	)
+endif()
